rslox/tests/fixtures/error-set-prop-on-not-obj.out
# exit code: 65
# stdout:

# stderr:
Runtime error: Only instances have fields.
[line 2] in <script>

