rslox/tests/fixtures/error-set-prop-on-not-obj.lox
var num = 7;
num.field = "foo";